istiogrpc/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: grpc-demo
  # istio-injection label is added later when testing with the mesh
